--- a/index.html
+++ b/index.html
@@ -4,23 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Franklin Reynoso</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <main>
       <!-- ***********************  ABOUT / PROFILE  *********************** -->
       <header>
+        <div class="content-wrap">
+
+        
         <h1>Franklin Reynoso</h1>
         <h2>Graphic Designer</h2>
 
-        <p>Add your profile copy here. Add more paragraphs or links as needed. Here is some dummy text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum, diam ut gravida efficitur, risus neque scelerisque erat, ut rhoncus erat odio ac justo. Nunc scelerisque vestibulum augue, sit amet hendrerit ante.</p>
+        <p> erisque vestibulum augue, sit amet hendrerit ante.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo duis ut diam quam nulla porttitor massa. Malesuada fames ac turpis egestas integer. Nisl tincidunt eget nullam non nisi est sit. Nisl rhoncus mattis rhoncus urna neque. Eget sit amet tellus 
-          cras adipiscing enim eu. Aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Pellentesque sit amet porttitor eget. Sed egestas egestas fringilla phasellus. Sollicitudin ac orci phasellus egestas tellus rutrum. Massa massa ultricies mi quis hendrerit. Faucibus purus in massa tempor nec feugiat
+          cras adipiscing Pellentesque sit amet porttitor eget. Massa massa ultricies mi quis hendrerit. Faucibus purus in massa tempor nec feugiat
            nisl pretium. Augue neque gravida in fermentum et sollicitudin ac. Proin nibh nisl condimentum id venenatis. Quis blandit turpis cursus in hac habitasse. Amet consectetur adipiscing elit ut aliquam purus sit amet luctus. Et pharetra pharetra massa massa ultricies mi quis. Leo duis ut diam quam nulla porttitor massa id.</p>
       </header>
 
       <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
-      <section class="projects"> 
+      <section class="projects-item"> 
+        <div class="content-wrap">
+
         <h2>Featured Projects</h2>
         <p>View selected projects below. More information can be found at <a href="www.linkedin.com/in/franklin-reynoso-12031
           "> www.linkedin.com/in/franklin-reynoso-12031
@@ -38,6 +45,7 @@
 
       <!-- ***********************  WORK EXPERIENCE  *********************** -->
       <section class="work-experience">
+        <div class="content-wrap">
         <h2>Work Experience</h2>
         <p>{fake} Graphic designer</p>
 
@@ -55,11 +63,13 @@
             <li>Responsible for designing and creating</li>
           </ul>
         </section>
+        </div>
         <!-- End of Job block. -->
       </section>
 
       <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
       <section class=" education">
+        <div class="content-wrap">
         <h2>Education</h2>
 
         <!-- Copy this whole <section> block to add more schools. -->
@@ -70,9 +80,11 @@
         </section>
         <!-- End of School block. -->
       </section>
+    </div>
 
       <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
       <footer>
+        <div class="content-wrap">
         <h2>Let's Keep in Touch!</h2>
 
         <!-- Social media and contact links. Add or remove any networks. -->
@@ -83,6 +95,7 @@
           <li><a href="#" target="_blank">LinkedIn</a></li>
           <li><a href="#" target="_blank">Facebook</a></li>
         </ul>
+      </div>
       </footer>
     </main>
   </body>
